k8s/nexus-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-headless
  namespace: nexus
spec:
  clusterIP: None
  ports:
  - port: 8081
    name: nexus
  selector:
    app: nexus
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-docker
  namespace: nexus
spec:
  ports:
  - port: 8082
    targetPort: 8082
    name: docker
  selector:
    app: nexus
